--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,8 +7,6 @@ services:
       - "8080"
   db:
     environment:
-      POSTGRES_USER: sok
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: sok
+      MSSQL_SA_PASSWORD: Strong!Passw0rd
     ports:
-      - "5432:5432"  
+      - "1433:1433"
