--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,14 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:17
+    image: mcr.microsoft.com/mssql/server:2022-CU20-ubuntu-22.04
     restart: always
+    environment:
+      - ACCEPT_EULA=Y
+    ports:
+      - "1433:1433"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mssql_data:/var/opt/mssql
 
 volumes:
-  postgres_data:
+  mssql_data:
