--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "sokAppContext": "Server=db,1433;Database=sok;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+  }
 }
