Dodano middleware wyboru parafii i centralny kontekst BD
Wprowadzono nowy kontekst bazy danych `centralDbContext` oraz klasę `User` w przestrzeni nazw `app.Models.Central`.
Zaktualizowano `Program.cs` w celu rejestracji kontekstu i usług `IParishGetter` oraz `IParishSetter`.
Dodano klasę `ParishService` oraz middleware `MultiParishServiceMiddleware` do zarządzania parafiami na podstawie ciasteczek.
Zaktualizowano `appsettings.json`, aby dodać nowe połączenie do `centralDbContext` oraz konfigurację dla wielu parafii.

--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -7,6 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sokAppContext": "Server=db,1433;Database=sok;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
-  }
+    "centralDbContext": "Server=db,1433;Database=sok_central;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+  },
+  "Parishes": [
+    {
+      "Name": "parishA",
+      "ConnectionString": "Server=db,1433;Database=sok_parishA;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+    },
+    {
+      "Name": "parishB",
+      "ConnectionString": "Server=db,1433;Database=sok_parishB;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+    }
+  ]
 }
