--- a/app/appsettings.Development.json
+++ b/app/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db,1433;Database=sok;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+    "DefaultConnection": "Server=db,1433;Database=CentralDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
