--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -7,16 +7,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "centralDbContext": "Server=db,1433;Database=sok_central;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+    "centralDbContext": "Server=db,1433;Database=CentralDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
   },
   "Parishes": [
     {
       "Name": "parishA",
-      "ConnectionString": "Server=db,1433;Database=sok_parishA;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+      "ConnectionString": "Server=db,1433;Database=sok_parishA;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
     },
     {
       "Name": "parishB",
-      "ConnectionString": "Server=db,1433;Database=sok_parishB;User Id=sa;Password=Strong!Passw0rd;TrustServerCertificate=True"
+      "ConnectionString": "Server=db,1433;Database=sok_parishB;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
     }
   ]
 }
