Uporządkowanie zarządzania indywidualnymi bazami
Uporządkowano strukturę plików. Zmieniono usługę provisioningu do znośnej postaci. Dodano komentarze w wielu miejscach. Wyniesiono rejestrację kontekstów bazodanowych do rozszerzenia. Usunięto connection stringi z appsettings.json na rzecz ich zaszyfrowanej postaci w bazie danych, której dodano obsługę (pozostają connection stringi centralnej bazy i administratora w zmiennych środowiskowych z docker compose). W usłudze provisioningu dodano tworzenie nowej parafii, wraz z generowaniem nazwy bazy oraz nazwy i hasła użytkownika, a także przy tym stworzenie tej bazy i użytkownika. Przeniesiono middleware do czytania obecnej parafii do osobnego folderu i zmieniono nazwę.

--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -5,18 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "centralDbContext": "Server=db,1433;Database=CentralDb;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
-  },
-  "Parishes": [
-    {
-      "Name": "parishA",
-      "ConnectionString": "Server=db,1433;Database=sok_parishA;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
-    },
-    {
-      "Name": "parishB",
-      "ConnectionString": "Server=db,1433;Database=sok_parishB;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True"
-    }
-  ]
+  "AllowedHosts": "*"
 }
