Wykluczenie tailwindowego css'a
Usunięto wynikowe pliki site.min.css i site.output.css, produkowane przez TailwindCSS, i dodano je do .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,5 @@ coverage*.json
 coverage*.xml
 coverage*.info
 /SOK.Web/node_modules
+/SOK.Web/wwwroot/css/site.min.css
+/SOK.Web/wwwroot/css/site.output.css
