Poprawa mapowania portów
Poprawiono mapowanie portów w Dockerze, aby zawsze udostępniać port 8060 przy debugowaniu. Ustawiono ten port dla browser-synca w package.json.

--- a/SOK.Web/Properties/launchSettings.json
+++ b/SOK.Web/Properties/launchSettings.json
@@ -18,12 +18,12 @@
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "launchBrowser": false,
+      "launchUrl": "{Scheme}://{ServiceHost}:8060",
       "environmentVariables": {
         "ASPNETCORE_HTTP_PORTS": "8080"
       },
-      "publishAllPorts": true,
+      "publishAllPorts": false,
       "useSSL": false
     }
   },
