Dalszy rozwój logowania
Poprawiono powiadomienia i dodano kod javascript do automatycznego ich usuwania, poprawiono widok logowania, dodano ikony Bootstrapa, zwiększono czcionkę i rozmiar interfejsu dla większych ekranów.

--- a/SOK.Web/package.json
+++ b/SOK.Web/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch:css": "npx @tailwindcss/cli -i wwwroot/css/site.css -o wwwroot/css/site.min.css -m --watch",
-    "watch:bs": "browser-sync start --proxy \"http://localhost:8060\" --files \"wwwroot/css/*.css, Views/**/*.cshtml\" --no-ui --reload-delay 500"
+    "watch:bs": "browser-sync start --proxy \"http://localhost:8060\" --files \"wwwroot/js/*.js, wwwroot/css/*.css, Views/**/*.cshtml\" --no-ui --reload-delay 500"
   },
   "keywords": [],
   "author": "",
