Dostosowanie do VS Code
Dostosowano projekt do developmentu w VS Code - dodano docker-compose.vs.code.yml, którym należy nadpisać poprzednie dwa docker-compose, a także zmieniono Dockerfile, aby uwzględniał odpowiedni moduł .dll (po dawnej zmianie nazwy projektu)

--- a/SOK.Web/Dockerfile
+++ b/SOK.Web/Dockerfile
@@ -17,7 +17,6 @@ USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 
-
 # Ten etap służy do kompilowania projektu usługi
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
@@ -25,7 +24,7 @@ WORKDIR /src
 COPY ["SOK.Web/SOK.Web.csproj", "SOK.Web/SOK.Web.csproj"]
 RUN dotnet restore "./SOK.Web/SOK.Web.csproj"
 COPY . .
-WORKDIR "/src/SOK.Web"
+WORKDIR /src/SOK.Web
 RUN dotnet build "./SOK.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Ten etap służy do publikowania projektu usługi do skopiowania do etapu końcowego
@@ -37,4 +36,4 @@ RUN dotnet publish "./SOK.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "app.dll"]
+ENTRYPOINT ["dotnet", "SOK.Web.dll"]
