--- a/docker-compose.vs.code.yml
+++ b/docker-compose.vs.code.yml
@@ -9,7 +9,7 @@
       - /src/SOK.Web/bin
       - /src/SOK.Web/obj
     # command: dotnet watch run --urls=http://0.0.0.0:8080
-    entrypoint: ["dotnet", "watch", "run", "--urls=http://0.0.0.0:8080", "--project", "/src/SOK.Web/SOK.Web.csproj"]
+    entrypoint: ["dotnet", "watch", "run", "--urls=http://0.0.0.0:8080", "--non-interactive", "--project", "/src/SOK.Web/SOK.Web.csproj"]
     environment:
       DOTNET_USE_POLLING_FILE_WATCHER: "true"
       DOTNET_WATCH_RESTART_ON_RUDE_EDIT: "true"
