--- a/SOK.Web/SOK.Web.csproj
+++ b/SOK.Web/SOK.Web.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.422" />
   </ItemGroup>
 
   <ItemGroup>
