--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,9 @@
 ﻿networks:
   web:    # sieć publiczna dla Traefika
-    external: false
+    name: web  # Nazwa bez prefiksu projektu
+    driver: bridge
   internal: # sieć prywatna między app a db
+    driver: bridge
     internal: true
 
 services:
@@ -12,6 +14,8 @@ services:
     command:
       - "--api.dashboard=true"
       - "--providers.docker=true"
+      - "--providers.docker.network=web"
+      - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
 
@@ -53,7 +57,6 @@ services:
       Admin__SeedExampleData: "${ADMIN_SEED_EXAMPLE_DATA:-false}"
     labels:
       - "traefik.enable=true"
-      - "traefik.docker.network=web"
       - "traefik.http.routers.sok.rule=Host(`${DOMAIN_NAME}`)"
       - "traefik.http.routers.sok.entrypoints=websecure"
       - "traefik.http.routers.sok.tls.certresolver=letsencrypt"
