--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -75,6 +75,8 @@ services:
     environment:
       ACCEPT_EULA: Y
       MSSQL_SA_PASSWORD: ${SA_PASSWORD}
+    ports:
+      - "1433:1433"  # Expose SQL Server port
     volumes:
       - mssql_data:/var/opt/mssql
     networks:
