--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,8 @@
   internal: # sieć prywatna między app a db
     driver: bridge
     internal: true
+  db_management: # sieć dla dostępu z hosta (SSH tunnel)
+    driver: bridge
 
 services:
   traefik:
@@ -81,6 +83,7 @@ services:
       - mssql_data:/var/opt/mssql
     networks:
       - internal
+      - db_management  # Dodatkowa sieć dla dostępu z hosta
 
 volumes:
   mssql_data:
