--- a/SOK.Application/SOK.Application.csproj
+++ b/SOK.Application/SOK.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.8.0" />
+    <PackageReference Include="QuestPDF" Version="2025.12.0" />
   </ItemGroup>
 
   <ItemGroup>
