--- a/SOK.Web/SOK.Web.csproj
+++ b/SOK.Web/SOK.Web.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\SOK.Infrastructure\SOK.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="Fonts\*.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
