--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,43 @@
 ﻿services:
   app:
-    image: ${DOCKER_REGISTRY-}app
-    container_name: web
+    image: sok-web-dev:latest
     build:
       context: .
       dockerfile: SOK.Web/Dockerfile
+    container_name: web-dev
+    restart: no
+    environment:
+      ASPNETCORE_ENVIRONMENT: "Development"
+      ASPNETCORE_HTTP_PORTS: "8080"
+      Admin__SqlServer: "Server=db,1433;Database=master;User Id=sa;Password=${SA_PASSWORD};TrustServerCertificate=True"
+      ConnectionStrings__CentralDb: "Server=db,1433;Database=CentralDb;User Id=sa;Password=${SA_PASSWORD};TrustServerCertificate=True"
+      Crypto__Key: "${CRYPTO_KEY}"
+      Admin__Username: "${ADMIN_USERNAME}"
+      Admin__Password: "${ADMIN_PASSWORD}"
+      Admin__Email: "${ADMIN_EMAIL}"
+      Admin__DisplayName: "${ADMIN_DISPLAY_NAME}"
+      Admin__SeedExampleData: "${ADMIN_SEED_EXAMPLE_DATA:-false}"
+    ports:
+      - "8060:8080"
     depends_on:
       - db
   db:
     image: mcr.microsoft.com/mssql/server:2022-CU20-ubuntu-22.04
-    container_name: db
+    container_name: db-dev
     restart: always
     environment:
-      - ACCEPT_EULA=Y
+      ACCEPT_EULA: Y
+      MSSQL_SA_PASSWORD: ${SA_PASSWORD}
+    ports:
+      - "1433:1433"
     volumes:
       - mssql_data:/var/opt/mssql
+    healthcheck:
+      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P ${SA_PASSWORD} -C -Q 'SELECT 1' || exit 1"]
+      interval: 10s
+      retries: 10
+      start_period: 10s
+      timeout: 3s
 
 volumes:
   mssql_data:
