--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 DOMAIN_NAME=placeholder.com
 SA_PASSWORD=YourStrong!Passw0rd
-CRYPTO_KEY=J0BQomj4ichywU/Lm2FlG4CMzVqHclmxydZOz2KQBDI=
+CRYPTO_KEY=MySecureParishCryptoKey2026!
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 ADMIN_EMAIL=admin@admin.test
